src/styles/components/_select.scss
$select-input-placeholder:          $dp-greyscale-850;
$select-text-color:                 $dp-greyscale-850;

$select-input-height : 24px;
$select-padding-vertical: 10px;
$select-padding-horizontal: 8px;
//$select-input-internal-height: 24px;

$select-option-color: $dp-greyscale-850;

$select-input-border-color: $dp-greyscale-300;

.dp-select {
  &, * {
    box-sizing: border-box;
  }
  font-family: $primary-font;
  font-weight: $pf-regular;

  height: 24px;
  font-size: $font-size-m;

  &:focus {
    outline: none;
  }

  .react-select__control {
    height: 24px;
    min-height: 24px;
    border-radius: $rad-size-m;
    padding-left: 8px;
    &:hover {
      box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
      border-color: $dp-sonic-primary;
    }
    &:focus {
      border-color: $dp-sonic-primary;
    }
  }

  .react-select__value-container {
    padding: 0;
  }

  .react-select__indicator-separator {
    width: 0;
  }

  .react-select__placeholder,
  .react-select__control .react-select__single-value {
    line-height: 22px;
    height: 22px;
  }

  .Select-input {
    height: 22px;
    > input {
      padding: 4px 0 4px;
    }
  }

  .react-select__dropdown-indicator {
    border-width: 3px 3px 1.5px;
    border-color: #999 transparent transparent;
    border-style: solid;
    border-collapse: separate;
    display: inline-block;
    height: auto;
    width: auto;
    margin-right: 10px;
  }

  .react-select__is-open .react-select__dropdown-indicator {
    border-width: 1.5px 3px 3px;
    border-color: transparent transparent #999;
  }

  // placeholder
  .react-select__placeholder,
  .react-select__control .react-select__single-value {
    font-style: italic;
  }

  .react-select__menu {
    margin: -1px 0 0;
    z-index: 2;
  }

  .react-select__menu-list {
    padding: 0;
  }

  .react-select__menu {
    border-color: $dp-sonic-primary;
    border-width: 0 1px 1px;
    border-style: solid;
    border-radius: 0 0 4px 4px;
    box-shadow: none;
    .react-select__option {
      padding: 5px 8px;
    }
  }
  .react-select__is-open > .react-select__control {
    border-color: $dp-sonic-primary;
    border-radius: 4px 4px 0 0;
  }

  .dp-icon {
    position: absolute;
    left: 6px;
    z-index: 1;
    font-size: $icon-size-s;
    top: calc(50% - #{$icon-size-s / 2});
    color: $dp-greyscale-400;
  }
  &.dp-input--with-icon {
    position: relative;
    flex: 1 0 auto;
    .react-select__control,
    .Select-value,
    .multiselect-native-select button {
      padding-left: 24px;
    }
    .Select-input {
      padding-left: 0;
    }
  }

  &.is-disabled {
    > .react-select .react-select__control {
      border-color: $dp-greyscale-200;
      background-color: $dp-greyscale-150;
      .react-select__placeholder {
        color: $dp-greyscale-350;
      }
    }
    .dp-icon {
      color: $dp-greyscale-350;
    }
  }

  > .dp-select__input {
    position: relative;
    height: 24px;
    font-size: $font-size-m;
    font-family: $primary-font;
    font-weight: $pf-regular;
    color: $dp-greyscale-850;
    line-height: 24px;
    padding: 0 20px 0 6px;
    border-radius: $rad-size-m;
    border: 1px solid $select-input-border-color;
    background-color: $dp-greyscale-00;
    display: inline-block;
    cursor: pointer;
    user-select: none;
    .dp-select__arrow {
      position: absolute;
      top: calc(50% - 1px);
      right: 8px;
      border-width: 3px 3px 1.5px;
      border-style: solid;
      border-color: $dp-greyscale-850 transparent transparent;
      height: 0;
      width: 0;
      &.dp-select__arrow--opened {
        border-width: 1.5px 3px 3px;
        top: calc(50% - 3px);
        border-color: transparent transparent $dp-greyscale-850;
      }
    }
    &:hover {
      border-color: $dp-greyscale-450;
    }
  }
  > .dp-select__content {
    z-index: $dp-zindex-top;
    border-radius: $rad-size-m;
    border: 1px solid $dp-sonic-primary;
    background-color: $dp-greyscale-00;
    position: absolute;
    padding: 6px 6px;
    width: auto;
    > .dp-list {
      -webkit-margin-after: 0;
      -webkit-margin-before: 0;
    }
  }
  &.dp-select--disabled {
    .dp-select__input {
      border-color: $dp-greyscale-200;
      background-color: $dp-greyscale-150;
      color: $dp-greyscale-350;
      .dp-select__arrow {
        border-color: $dp-greyscale-350 transparent transparent;
      }
    }
  }
}

